# Aegis_Mesh

./: .env.example  .gitignore  README.md  automated_tests.py  mesh_bootstrapper.py  pyproject.toml
docs/: aegismesh_blueprint.md  whitepaper.txt
frontend/: index.html  script.js  styles.css
src/aegismesh/: __init__.py
src/aegismesh/agents/: __init__.py  base_agent.py  netdiag_agent.py  security_sandbox.py  sysmon_agent.py  win_log_agent.py
src/aegismesh/core/: __init__.py  a2a_client.py  black_box.py  config.py  governor.py  telemetry.py  transport_scope.py
src/aegismesh/evidence/: __init__.py  graph.py
src/aegismesh/gateway/: __init__.py  main.py
src/aegismesh/registry/: __init__.py  db.py  main.py  models.py  recovery.py
src/aegismesh/supervisor/: __init__.py  graph.py  state.py  termination.py
src/aegismesh/supervisor/nodes/: __init__.py  causal_validation.py  evidence_synthesis.py  intent_parser.py  skill_discovery.py  task_dispatch.py
tests/: test_phase1_foundation.py
